2025-08-18 변경사항 반영