@@ -1,8 +1,8 @@
 package org.kimgooner.tycoon.global.item.job.mining;
 
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.inventory.ItemFlag;
@@ -10,79 +10,24 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
-import org.bukkit.plugin.Plugin;
+import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 
 public class PickaxeBuilder {
     private final ItemStack item;
     private final ItemMeta meta;
-    private final Plugin plugin;
+    private final JavaPlugin plugin;
+    private final MiniMessage mm = MiniMessage.miniMessage();
 
-    // 스탯 관련 데이터
-    private static final List<String> STAT_KEYS = List.of("power", "speed", "fortune", "pristine");
-    private static final Map<String, String> STAT_NAMES = Map.of(
-            "power", "파괴 등급",
-            "speed", "채광 속도",
-            "fortune", "채광 행운",
-            "pristine", "순수"
-    );
-    private static final Map<String, String> STAT_ICONS = Map.of(
-            "power",   "Ⓟ ",  // 폭이 작음
-            "speed",   "⸕  ", // 폭이 큼
-            "fortune", "☘  ",
-            "pristine","✧  "  // 폭이 좁음, 공백 더 줌
-    );
-    private static final Map<String, NamedTextColor> STAT_COLORS = Map.of(
-            "power", NamedTextColor.GREEN,
-            "speed", NamedTextColor.GOLD,
-            "fortune", NamedTextColor.GOLD,
-            "pristine", NamedTextColor.DARK_PURPLE
-    );
-
-    // 인챈트 관련 데이터
-    private static final List<String> ENCHANT_KEYS = List.of("enchant_speed", "enchant_fortune", "enchant_pristine");
-    private static final Map<String, String> ENCHANT_NAMES = Map.of(
-            "enchant_speed", "효율",
-            "enchant_fortune", "행운",
-            "enchant_pristine", "순수"
-    );
-    private static final List<String> ENCHANT_ICONS = List.of(
-            "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX", "X"
-    );
-    private static final List<NamedTextColor> ENCHANT_COLORS = List.of(
-            NamedTextColor.DARK_GRAY,
-            NamedTextColor.GRAY,
-            NamedTextColor.WHITE,
-            NamedTextColor.GREEN,
-            NamedTextColor.BLUE,
-            NamedTextColor.DARK_PURPLE,
-            NamedTextColor.GOLD,
-            NamedTextColor.LIGHT_PURPLE,
-            NamedTextColor.AQUA,
-            NamedTextColor.RED
-    );
-    private static final List<Integer> ENCHANT_EFFICIENCY = List.of(
-            0, 30, 50, 70, 90, 110, 130, 150, 170, 190, 210
-    );
-
-    private static final List<Integer> ENCHANT_FORTUNE = List.of(
-            0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100
-    );
-
-    private static final List<Integer> ENCHANT_PRISTINE = List.of(
-            0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
-    );
-
-    public PickaxeBuilder(Plugin plugin, ItemStack itemStack) {
+    public PickaxeBuilder(JavaPlugin plugin, ItemStack itemStack) {
         this.plugin = plugin;
         this.item = itemStack;
         this.meta = item.getItemMeta();
     }
 
-    public PickaxeBuilder(Plugin plugin, Material material) {
+    public PickaxeBuilder(JavaPlugin plugin, Material material) {
         this.plugin = plugin;
         this.item = new ItemStack(material);
         this.meta = item.getItemMeta();
@@ -112,7 +57,7 @@ public class PickaxeBuilder {
     public PickaxeBuilder setPower(int value) {
         if (meta != null) {
             PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "power"), PersistentDataType.INTEGER, value);
+            data.set(new NamespacedKey(plugin, "mining_power"), PersistentDataType.INTEGER, value);
         }
         return this;
     }
@@ -120,7 +65,7 @@ public class PickaxeBuilder {
     public PickaxeBuilder setSpeed(int value) {
         if (meta != null) {
             PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "speed"), PersistentDataType.INTEGER, value);
+            data.set(new NamespacedKey(plugin, "mining_speed"), PersistentDataType.INTEGER, value);
         }
         return this;
     }
@@ -128,133 +73,138 @@ public class PickaxeBuilder {
     public PickaxeBuilder setFortune(int value) {
         if (meta != null) {
             PersistentDataContainer data = meta.getPersistentDataContainer();
+            data.set(new NamespacedKey(plugin, "mining_fortune"), PersistentDataType.INTEGER, value);
+        }
+        return this;
+    }
+
+    public PickaxeBuilder setSpread(int value) {
+        if (meta != null) {
+            PersistentDataContainer data = meta.getPersistentDataContainer();
+            data.set(new NamespacedKey(plugin, "mining_spread"), PersistentDataType.INTEGER, value);
+        }
+        return this;
+    }
+
+    public PickaxeBuilder setDust(int value) {
+        if (meta != null) {
+            PersistentDataContainer data = meta.getPersistentDataContainer();
+            data.set(new NamespacedKey(plugin, "mining_dust"), PersistentDataType.INTEGER, value);
+        }
+        return this;
+    }
+
+    public PickaxeBuilder setWisdom(int value) {
+        if (meta != null) {
+            PersistentDataContainer data = meta.getPersistentDataContainer();
+            data.set(new NamespacedKey(plugin, "mining_wisdom"), PersistentDataType.INTEGER, value);
+        }
+        return this;
+    }
+
+    public PickaxeBuilder enchantEfficiency(int value) {
+        if (meta != null) {
+            PersistentDataContainer data = meta.getPersistentDataContainer();
+            data.set(new NamespacedKey(plugin, "efficiency"), PersistentDataType.INTEGER, value);
+        }
+        return this;
+    }
+
+    public PickaxeBuilder enchantFortune(int value) {
+        if (meta != null) {
+            PersistentDataContainer data = meta.getPersistentDataContainer();
             data.set(new NamespacedKey(plugin, "fortune"), PersistentDataType.INTEGER, value);
         }
         return this;
     }
 
-    public PickaxeBuilder setPristine(int value) {
+    public PickaxeBuilder enchantArcheologist(int value) {
         if (meta != null) {
             PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "pristine"), PersistentDataType.INTEGER, value);
+            data.set(new NamespacedKey(plugin, "archeologist"), PersistentDataType.INTEGER, value);
         }
         return this;
     }
 
-    public PickaxeBuilder setEnchantSpeed(int value) {
+    public PickaxeBuilder enchantWiseMiner(int value) {
         if (meta != null) {
             PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "enchant_speed"), PersistentDataType.INTEGER, value);
+            data.set(new NamespacedKey(plugin, "miner"), PersistentDataType.INTEGER, value);
         }
         return this;
     }
 
-    public PickaxeBuilder setEnchantFortune(int value) {
-        if (meta != null) {
-            PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "enchant_fortune"), PersistentDataType.INTEGER, value);
+    private final List<String> ENCHANT_ICONS = List.of(
+            "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX", "X"
+    );
+    private Component getEnchantText(int level, String name){
+        if(level <= 3){
+            return mm.deserialize("<white>%s %s</white>".formatted(name, ENCHANT_ICONS.get(level-1)));
         }
-        return this;
+        else if (level <= 6){
+            return mm.deserialize("<gold>%s %s</gold>".formatted(name, ENCHANT_ICONS.get(level-1)));
+        }
+        else if (level <= 9) {
+            return mm.deserialize("<light_purple>%s %s</light_purple>".formatted(name, ENCHANT_ICONS.get(level-1)));
+        }
+        else {
+            return mm.deserialize("<#e6fffe>%s %s</#e6fffe>".formatted(name, ENCHANT_ICONS.get(level-1)));
+        }
     }
 
-    public PickaxeBuilder setEnchantPristine(int value) {
-        if (meta != null) {
-            PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, "enchant_pristine"), PersistentDataType.INTEGER, value);
-        }
-        return this;
-    }
-
-    /*
-    public PickaxeBuilder setStat(String key, int value) {
-        if (!STAT_KEYS.contains(key)) return this;
-        if (meta != null) {
-            PersistentDataContainer data = meta.getPersistentDataContainer();
-            data.set(new NamespacedKey(plugin, key), PersistentDataType.INTEGER, value);
-        }
-        return this;
-    }
-     */
-
-    private int getStat(String key) {
-        if ((!STAT_KEYS.contains(key) && !ENCHANT_KEYS.contains(key)) || meta == null) return 0;
+    public List<Component> buildLore(JavaPlugin plugin) {
+        List<Component> lore = new ArrayList<>();
         PersistentDataContainer data = meta.getPersistentDataContainer();
-        return data.getOrDefault(new NamespacedKey(plugin, key), PersistentDataType.INTEGER, 0);
-    }
 
-    private List<Component> generateStatLore() {
-        List<Component> lines = new ArrayList<>();
+        // 값 불러오기 (없으면 기본값 0)
+        int power   = data.getOrDefault(new NamespacedKey(plugin, "mining_power"), PersistentDataType.INTEGER, 0);
+        int speed   = data.getOrDefault(new NamespacedKey(plugin, "mining_speed"), PersistentDataType.INTEGER, 0);
+        int fortune = data.getOrDefault(new NamespacedKey(plugin, "mining_fortune"), PersistentDataType.INTEGER, 0);
+        int spread  = data.getOrDefault(new NamespacedKey(plugin, "mining_spread"), PersistentDataType.INTEGER, 0);
+        int dust    = data.getOrDefault(new NamespacedKey(plugin, "mining_dust"), PersistentDataType.INTEGER, 0);
+        int wisdom  = data.getOrDefault(new NamespacedKey(plugin, "mining_wisdom"), PersistentDataType.INTEGER, 0);
 
-        lines.add(Component.text(" "));
-        lines.add(Component.text("[장비 스텟]").color(NamedTextColor.WHITE).decoration(TextDecoration.ITALIC, false));
+        int eff     = data.getOrDefault(new NamespacedKey(plugin, "efficiency"), PersistentDataType.INTEGER, 0);
+        int fort    = data.getOrDefault(new NamespacedKey(plugin, "fortune"), PersistentDataType.INTEGER, 0);
+        int arch    = data.getOrDefault(new NamespacedKey(plugin, "archeologist"), PersistentDataType.INTEGER, 0);
+        int miner   = data.getOrDefault(new NamespacedKey(plugin, "miner"), PersistentDataType.INTEGER, 0);
 
-        int enchantCount = 0;
-        for (String key : STAT_KEYS) {
-            int baseValue = getStat(key);
-            int enchantLevel = getStat("enchant_" + key);
-            int bonusValue = getEnchantBonus(key, enchantLevel);
+        speed += eff * 20;
+        fortune += fort * 5;
+        dust += arch * 2;
+        wisdom += miner * 2;
 
-            Component statLine = Component.text("")
-                    .append(Component.text(STAT_NAMES.get(key) + ":")
-                            .color(NamedTextColor.WHITE)
-                            .decoration(TextDecoration.ITALIC, false))
-                    .append(Component.text(String.format(" %,d ", baseValue))
-                            .color(STAT_COLORS.get(key))
-                            .decoration(TextDecoration.ITALIC, false));
+        int stat_count = 0;
+        int special_count = 0;
+        int enchant_count = 0;
 
-            if (enchantLevel > 0 && bonusValue > 0) {
-                statLine = statLine.append(Component.text(String.format("(+%,d) ", bonusValue))
-                        .color(NamedTextColor.BLUE)
-                        .decoration(TextDecoration.ITALIC, false));
-                enchantCount++;
-            }
+        // 불러온 값으로 로어 만들기
+        if (power > 0)   lore.add(Component.text("§f파괴 단계 %d".formatted(power)));
+        lore.add(Component.text(" "));
+        lore.add(Component.text("§f<스텟>"));
+        if (speed > 0)   {lore.add(Component.text("§f채광 속도: §6+%,d ⸕".formatted(speed))); stat_count++;}
+        if (fortune > 0) {lore.add(Component.text("§f채광 행운: §6+%,d ☘".formatted(fortune))); stat_count++;}
+        if (spread > 0)  {lore.add(Component.text("§f연쇄 파괴: §e+%,d ▚".formatted(spread))); stat_count++;}
+        if(stat_count == 0) lore.add(Component.text("§8-스텟 없음-"));
+        lore.add(Component.text(" "));
+        lore.add(Component.text("§f<특수 스텟>"));
+        if (wisdom > 0)  {lore.add(Component.text("§f채광 숙련: §3+%,d ☯".formatted(wisdom))); special_count++;}
+        if (dust > 0)    {lore.add(Component.text("§f추가 가루 획득량: §2+%,d%%".formatted(dust))); special_count++;}
+        if(special_count == 0) lore.add(Component.text("§8-특수 스텟 없음-"));
+        lore.add(Component.text(" "));
+        lore.add(Component.text("§f<인챈트>"));
+        if (eff > 0)     {lore.add(getEnchantText(eff, "효율").decoration(TextDecoration.ITALIC, false)); enchant_count++;}
+        if (fort > 0)    {lore.add(getEnchantText(fort, "행운").decoration(TextDecoration.ITALIC, false)); enchant_count++;}
+        if (arch > 0)    {lore.add(getEnchantText(arch, "고고학").decoration(TextDecoration.ITALIC, false)); enchant_count++;}
+        if (miner > 0)   {lore.add(getEnchantText(miner, "숙련된 광부").decoration(TextDecoration.ITALIC, false)); enchant_count++;}
+        if(enchant_count == 0) lore.add(Component.text("§8-인챈트 없음-"));
 
-            lines.add(statLine);
-        }
-
-        lines.add(Component.text(" "));
-        lines.add(Component.text("[인챈트]").color(NamedTextColor.WHITE).decoration(TextDecoration.ITALIC, false));
-
-        if (enchantCount > 0) {
-            for (String key : ENCHANT_KEYS) {
-                int level = getStat(key);
-                if (level > 0) {
-                    lines.add(Component.text(ENCHANT_NAMES.get(key) + " ")
-                            .color(NamedTextColor.WHITE)
-                            .decoration(TextDecoration.ITALIC, false)
-                            .append(Component.text(ENCHANT_ICONS.get(level))
-                                    .color(ENCHANT_COLORS.get(level))
-                                    .decoration(TextDecoration.ITALIC, false))
-                    );
-                }
-            }
-        } else {
-            lines.add(Component.text("아무런 인챈트가 없습니다!")
-                    .color(NamedTextColor.DARK_GRAY)
-                    .decoration(TextDecoration.ITALIC, false)
-            );
-        }
-
-        return lines;
-    }
-
-    private int getEnchantBonus(String key, int level) {
-        switch (key) {
-            case "speed":
-                return ENCHANT_EFFICIENCY.get(level);
-            case "fortune":
-                return ENCHANT_FORTUNE.get(level);
-            case "pristine":
-                return ENCHANT_PRISTINE.get(level);
-            default:
-                return 0;
-        }
+        return lore;
     }
 
     public ItemStack build() {
         if (meta != null) {
-            List<Component> fullLore = new ArrayList<>(generateStatLore());
-            meta.lore(fullLore);
+            meta.lore(buildLore(plugin));
             item.setItemMeta(meta);
         }
         return item;
